[Issue 37] Un peux d'AJAX pour ne pas recharger la page lors du changement de status des taches

--- a/templates/task/task_list.html.twig
+++ b/templates/task/task_list.html.twig
@@ -139,7 +139,10 @@
            if(event.target.getAttribute('class').includes('doing')){
                 ref = ref.replace('done','doing');
             }
-            window.location = ref;
+
+            var ajax = new XMLHttpRequest();
+            ajax.open("GET", ref, true);
+            ajax.send();
         }
 
         function showGraph(title) {
