[Issue 39] Améloriation du Burn Dow Chart, ligne théorique et ligne réelle

--- a/templates/sprint/sprint_list.html.twig
+++ b/templates/sprint/sprint_list.html.twig
@@ -50,7 +50,10 @@
 
     {% set title = "Burn Down Chart" %}
     {% set function = "BDC" %}
-    {% set statistic = burnDownStat %}
+    {% set statistic = burnDownTheoricStat %}
+    {% set statisticTitle = "BDC Théorique" %}
+    {% set statistic2 = burnDownStat %}
+    {% set statistic2Title = "BDC Réel" %}
     {% include 'graph/graph_area.html.twig' %}
 
     <script defer>
