--- a/templates/graph/graph_area.html.twig
+++ b/templates/graph/graph_area.html.twig
@@ -6,37 +6,67 @@
 
             // specify chart configuration item and data
             var option = {
-                title: {
-                    text: '{{ title }}'
-                },
-                toolbox: {
-                    feature: {
-                        saveAsImage: {}
-                    }
-                },
-                xAxis: {
-                    type: 'category',
-                    boundaryGap: false,
-                    data: [
-                        {% for data in statistic %}
+    title: {
+        text: '{{ title }}'
+    },
+    tooltip : {
+        trigger: 'axis',
+        axisPointer: {
+            type: 'cross',
+            label: {
+                backgroundColor: '#6a7985'
+            }
+        }
+    },
+    legend: {
+        data:['{{statisticTitle}}', '{{statistic2Title}}']
+    },
+    toolbox: {
+        feature: {
+            saveAsImage: {}
+        }
+    },
+    grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '3%',
+        containLabel: true
+    },
+    xAxis : [
+        {
+            type : 'category',
+            boundaryGap : false,
+            data : [{% for data in statistic %}
                             "{{ data['value'] }}",
-                        {% endfor %}
-                        ]
-                },
-                yAxis: {
-                    type: 'value'
-                },
-                series: [{
-                    data: [
-                        {% for data in statistic %}
+                        {% endfor %}]
+        }
+    ],
+    yAxis : [
+        {
+            type : 'value'
+        }
+    ],
+    series : [
+        {
+            name:'{{statisticTitle}}',
+            type:'line',
+            stack: '',
+            areaStyle: {},
+            data:[{% for data in statistic %}
                             {{ data['count'] }},
-                        {% endfor %}
-                    ],
-                    type: 'line',
-                    areaStyle: {}
-                }]
-
-            };
+                        {% endfor %}]
+        },
+        {
+            name:'{{statistic2Title}}',
+            type:'line',
+            stack: '',
+            areaStyle: {},
+            data:[{% for data in statistic2 %}
+                            {{ data['count'] }},
+                        {% endfor %}]
+        }
+    ]
+};
 
             // use configuration item and data specified to show chart
             myChart.setOption(option);
