--- a/templates/task/task_list_frag.html.twig
+++ b/templates/task/task_list_frag.html.twig
@@ -22,6 +22,8 @@
                                                     href="{{ path('changeTaskStatus', {'id_project' : project.id, 'id_task' : task.id, 'status' : 'done', 'id_sprint':sprint.id}) }}">
                                                     Fait
                                                 </a>
+                                            </div>
+                                            <div class="text-center row justify-content-around" style="margin-top:5px;">
                                                 <a class="btn btn-primary my-auto mr-1" href="{{ path('editTask', {'id_project': project.id, 'id_sprint' : sprint.id, 'id_task' : task.id}) }}">Editer</a>
                                                 <button class="btn btn-danger my-auto ml-1" data-toggle="modal" data-target="#task-delete-confirm">Supprimer</button>
                                             </div>
@@ -59,6 +61,8 @@
                                                     href="{{ path('changeTaskStatus', {'id_project' : project.id, 'id_task' : task.id, 'status' : 'done','id_sprint':sprint.id}) }}">
                                                     Fait
                                                 </a>
+                                            </div>
+                                            <div class="text-center row justify-content-around" style="margin-top:5px;">    
                                                 <a class="btn btn-primary my-auto mr-1" href="{{ path('editTask', {'id_project': project.id, 'id_sprint' : sprint.id, 'id_task' : task.id}) }}">Editer</a>
                                                 <button class="btn btn-danger my-auto ml-1" data-toggle="modal" data-target="#task-delete-confirm">Supprimer</button>
                                             </div>
