--- a/templates/member/login.html.twig
+++ b/templates/member/login.html.twig
@@ -22,7 +22,7 @@
                     <button type="submit" class="btn btn-primary btn-dark">Se connecter</button>
                     {{error | default('')}}
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
-                    <a href="{{ path('forgotten_password') }}">Mot de passe oublié?</a>
+                    <a href="{{ path('forgottenPassword') }}">Mot de passe oublié?</a>
                 </form>
             </div>
         </div>
