[Bugfix] Correction d'un nom de champ de formulaire invalide (Sprint) dans les templates

--- a/templates/sprint/sprint_form.html.twig
+++ b/templates/sprint/sprint_form.html.twig
@@ -13,7 +13,7 @@
                 {{ form_row(form.number) }}
                 {{ form_row(form.description) }}
                 {{ form_row(form.startDate) }}
-                {{ form_row(form.estimatedDuration) }}
+                {{ form_row(form.durationInDays) }}
                 <button type="submit" class="btn btn-primary">Créer le sprint</button>
                 {{ form_end(form) }}
             </div>
