--- a/templates/sprint/sprint_details.html.twig
+++ b/templates/sprint/sprint_details.html.twig
@@ -17,7 +17,7 @@
                   <span>Date de début :</span>
                   <span class="font-weight-bold">{{ sprint.startDate.format("d/m/Y") }}</span>
                   <span>| Durée estimé pour la réalisation :</span>
-                  <span class="font-weight-bold">{{ sprint.estimatedDuration }}</span>
+                  <span class="font-weight-bold">{{ sprint.durationInDays }}</span>
               </div>
 
             </div>
