--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -11,7 +11,7 @@
                 {{ form_errors(form) }}
                 {{ form_row(form.number) }}
                 {{ form_row(form.description) }}
-                {{ form_row(form.requiredManDays) }}
+                {{ form_row(form.requiredManDays), {"type": "number"}) }}
                 {{ form_row(form.developper) }}
                 {{ form_row(form.relatedIssues) }}
                 <button type="submit" class="btn btn-primary">Modifier la tâche</button>
