[Issue 40] Mise a jour des planing poker lors de l'ouverture d'un projet

--- a/templates/project_frame.html.twig
+++ b/templates/project_frame.html.twig
@@ -86,11 +86,11 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{{ path('ressourcesDocList', {'id_project': project.id}) }}">
                             <img class="icon" src="{{ asset('build/images/list.svg') }}" alt="Documentations">
-                            <span class="d-none d-sm-inline">Liste des ressourcesDoc</span>
+                            <span class="d-none d-sm-inline">Liste des docs</span>
                         </a>
                         <a class="dropdown-item"  href="{{ path('createRessourceDoc', {'id_project': project.id}) }}">
                             <img class="icon" src="{{ asset('build/images/add.svg') }}" alt="NewDocumentation">
-                            <span class="d-none d-sm-inline">Nouvelle documentation</span>
+                            <span class="d-none d-sm-inline">Nouvelle doc</span>
                         </a>
                     </div>
                 </li>
