[Issue 32] Ajout d'une icône pour la liste des ressources de documentation

--- a/templates/project_frame.html.twig
+++ b/templates/project_frame.html.twig
@@ -80,7 +80,7 @@
                 </li>
                 <li class="py-sm-2">
                     <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      {#<img class="icon" src="{{ asset('build/images/documentation.svg') }}" alt="Documentation" style="max-width: 30px;">#}
+                      <img class="icon" src="{{ asset('build/images/documentation.svg') }}" alt="Documentation" style="max-width: 30px;">
                         <span class="d-none d-sm-inline">Documentation</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
