--- a/templates/member/register.html.twig
+++ b/templates/member/register.html.twig
@@ -24,19 +24,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script>
-        let password = document.getElementById("registration_password_first");
-        let password_confirm = document.getElementById("registration_password_second");
-
-        function validatePassword(){
-            if(password.value !== password_confirm.value) {
-                password_confirm.setCustomValidity("Les mots de passe sont différents");
-            } else {
-                password_confirm.setCustomValidity('');
-            }
-        }
-
-        password.onchange = validatePassword;
-        password_confirm.onkeyup = validatePassword;
-    </script>
+    {{ encore_entry_script_tags('register') }}
 {% endblock %}
