--- a/templates/task/task_list_frag.html.twig
+++ b/templates/task/task_list_frag.html.twig
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="col-lg-4 px-0 px-lg-1 my-lg-0 my-1">
-                <div class="card card-height" style="overflow-y: scroll; height: 450px;" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div class="card card-height dropping-card" style="overflow-y: scroll; height: 450px;">
                     <div class="card-body doing">
                         <h3 class= "{{ getClassForStatus("doing")}} badge" style="display: block; font-size: 110%;">En cours</h3>
                         <div class="container-fluid">
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="col-lg-4 px-0 px-lg-1 my-lg-0 my-1">
-                <div class="card card-height" style="overflow-y: scroll; height: 450px;" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div class="card card-height dropping-card" style="overflow-y: scroll; height: 450px;">
                     <div class="card-body done">
                         <h3 class= "{{ getClassForStatus("done")}} badge" style="display: block; font-size: 110%;">Faite(s)</h3>
                         <div class="container-fluid">
